@startuml diagrama_conceptual
hide circle
hide empty members

skinparam backgroundColor #FFFFFF
skinparam defaultFontName Arial
skinparam defaultFontSize 11
skinparam classAttributeIconSize 0

skinparam class {
    BackgroundColor #FFFFFF
    BorderColor #2C3E50
    FontColor #000000
    FontSize 13
    FontStyle bold
    AttributeFontColor #1A1A1A
    AttributeFontSize 11
    StereotypeFontColor #444444
    StereotypeFontSize 10
}

skinparam interface {
    BackgroundColor #EBF5FB
    BorderColor #1A5276
    FontColor #000000
    FontStyle bold
}

skinparam note {
    BackgroundColor #FEFBD8
    BorderColor #D4AC0D
    FontSize 10
}

skinparam ArrowColor #2C3E50

title <b>Diagrama de Clases Conceptual</b>\nSistema de Finanzas Personales — POO UCC\n

' ======================================================
'  INTERFAZ
' ======================================================
interface Recurrente <<interfaz>> {
    + {abstract} aplicarRecurrencia() : void
}

' ======================================================
'  CLASE ABSTRACTA BASE
' ======================================================
abstract class Movimiento <<@MappedSuperclass>> {
    - id          : Long
    - monto       : double
    - fecha       : Date
    - descripcion : String
    - categoria   : Categoria
    - usuario     : Usuario
    --
    + Movimiento()
    + Movimiento(monto: double, fecha: Date, descripcion: String, categoria: Categoria, usuario: Usuario)
    + {abstract} registrar()                     : void
    + validarMonto()                             : boolean
    + getId()                                    : Long
    + getMonto()                                 : double
    + getFecha()                                 : Date
    + getDescripcion()                           : String
    + getCategoria()                             : Categoria
    + getUsuario()                               : Usuario
    + setMonto(monto: double)                    : void
    + setDescripcion(descripcion: String)        : void
    + setFecha(fecha: Date)                      : void
    + setCategoria(categoria: Categoria)         : void
    + setUsuario(usuario: Usuario)               : void
    + toString()                                 : String
}

' ======================================================
'  CLASES CONCRETAS
' ======================================================
class Ingreso <<@Entity>> {
    - fuente       : String
    - tipoPago     : String
    - esRecurrente : boolean
    --
    + Ingreso()
    + Ingreso(monto: double, fecha: Date, descripcion: String, categoria: Categoria, usuario: Usuario, fuente: String, tipoPago: String, esRecurrente: boolean)
    + registrar()                                : void
    + aplicarRecurrencia()                       : void
    + getFuente()                                : String
    + setFuente(fuente: String)                  : void
    + getTipoPago()                              : String
    + setTipoPago(tipoPago: String)              : void
    + isEsRecurrente()                           : boolean
    + setEsRecurrente(esRecurrente: boolean)     : void
    + toString()                                 : String
}

class Gasto <<@Entity>> {
    - tipoPago     : String
    - esRecurrente : boolean
    --
    + Gasto()
    + Gasto(monto: double, fecha: Date, descripcion: String, categoria: Categoria, usuario: Usuario, tipoPago: String, esRecurrente: boolean)
    + registrar()                                : void
    + aplicarRecurrencia()                       : void
    + getTipoPago()                              : String
    + setTipoPago(tipoPago: String)              : void
    + isEsRecurrente()                           : boolean
    + setEsRecurrente(esRecurrente: boolean)     : void
    + toString()                                 : String
}

' ======================================================
'  ENTIDADES INDEPENDIENTES
' ======================================================
class Usuario <<@Entity>> {
    - id       : Long
    - username : String
    - password : String
    - nombre   : String
    - estado   : String
    --
    + Usuario()
    + Usuario(username: String, password: String, nombre: String)
    + validarUsername()                          : boolean
    + getId()                                    : Long
    + getUsername()                              : String
    + getPassword()                              : String
    + getNombre()                                : String
    + getEstado()                                : String
    + setUsername(username: String)              : void
    + setPassword(password: String)              : void
    + setNombre(nombre: String)                  : void
    + setEstado(estado: String)                  : void
    + toString()                                 : String
}

class Categoria <<@Entity>> {
    - id     : Long
    - nombre : String
    - tipo   : String
    --
    + Categoria()
    + Categoria(nombre: String, tipo: String)
    + validarNombre()                            : boolean
    + validarTipo()                              : boolean
    + getId()                                    : Long
    + getNombre()                                : String
    + getTipo()                                  : String
    + setNombre(nombre: String)                  : void
    + setTipo(tipo: String)                      : void
    + toString()                                 : String
}

class Deuda <<@Entity>> {
    - id            : Long
    - persona       : String
    - monto         : double
    - descripcion   : String
    - tipo          : String
    - tipoPago      : String
    - estado        : String
    - montoPagado   : double
    - fechaRegistro : Date
    - usuario       : Usuario
    --
    + Deuda()
    + Deuda(persona: String, monto: double, descripcion: String, tipo: String, tipoPago: String, fechaRegistro: Date, usuario: Usuario)
    + marcarPagada()                             : boolean
    + abonar(monto: double)                      : void
    + getMontoPagado()                           : double
    + getMontoRestante()                         : double
    + validarMonto()                             : boolean
    + validarTipo()                              : boolean
    + getId()                                    : Long
    + getPersona()                               : String
    + getMonto()                                 : double
    + getDescripcion()                           : String
    + getTipo()                                  : String
    + getEstado()                                : String
    + getFechaRegistro()                         : Date
    + getUsuario()                               : Usuario
    + getTipoPago()                              : String
    + setTipoPago(tipoPago: String)              : void
    + setPersona(persona: String)                : void
    + setMonto(monto: double)                    : void
    + setDescripcion(descripcion: String)        : void
    + setTipo(tipo: String)                      : void
    + setEstado(estado: String)                  : void
    + toString()                                 : String
}

class Ahorro <<@Entity>> {
    - id          : Long
    - monto       : double
    - porcentaje  : double
    - descripcion : String
    - fecha       : Date
    - usuario     : Usuario
    --
    + Ahorro()
    + Ahorro(monto: double, porcentaje: double, descripcion: String, fecha: Date, usuario: Usuario)
    + getId()                                    : Long
    + getMonto()                                 : double
    + setMonto(monto: double)                    : void
    + getPorcentaje()                            : double
    + setPorcentaje(porcentaje: double)          : void
    + getDescripcion()                           : String
    + setDescripcion(descripcion: String)        : void
    + getFecha()                                 : Date
    + setFecha(fecha: Date)                      : void
    + getUsuario()                               : Usuario
    + setUsuario(usuario: Usuario)               : void
    + toString()                                 : String
}

class MetaAhorro <<@Entity>> {
    - id         : Long
    - montoMeta  : double
    - mes        : int
    - anio       : int
    - usuario    : Usuario
    --
    + MetaAhorro()
    + MetaAhorro(montoMeta: double, mes: int, anio: int, usuario: Usuario)
    + verificarCumplimiento(balanceDelMes: double) : boolean
    + validarMonto()                               : boolean
    + getId()                                      : Long
    + getMontoMeta()                               : double
    + getMes()                                     : int
    + getAnio()                                    : int
    + getUsuario()                                 : Usuario
    + setMontoMeta(montoMeta: double)              : void
    + toString()                                   : String
}

class ReporteFinanciero <<no @Entity>> {
    - mes           : int
    - anio          : int
    - totalIngresos : double
    - totalGastos   : double
    - balance       : double
    - nombreUsuario : String
    --
    + ReporteFinanciero()
    + ReporteFinanciero(mes: int, anio: int, totalIngresos: double, totalGastos: double, nombreUsuario: String)
    + calcularBalance()                            : double
    + generarResumen()                             : String
    + getMes()                                     : int
    + getAnio()                                    : int
    + getTotalIngresos()                           : double
    + getTotalGastos()                             : double
    + getBalance()                                 : double
    + getNombreUsuario()                           : String
    + toString()                                   : String
}

class Menu <<@Entity>> {
    - id     : Long
    - nombre : String
    - url    : String
    - icono  : String
    - orden  : int
    - padre  : Menu
    - hijos  : List<Menu>
    --
    + Menu()
    + Menu(nombre: String, url: String, icono: String, orden: int, padre: Menu)
    + getId()                                      : Long
    + getNombre()                                  : String
    + getUrl()                                     : String
    + getIcono()                                   : String
    + getOrden()                                   : int
    + getPadre()                                   : Menu
    + getHijos()                                   : List<Menu>
    + setNombre(nombre: String)                    : void
    + setUrl(url: String)                          : void
    + setIcono(icono: String)                      : void
    + setOrden(orden: int)                         : void
    + setPadre(padre: Menu)                        : void
    + setHijos(hijos: List<Menu>)                  : void
}

' ======================================================
'  RELACIONES
' ======================================================
Movimiento <|-- Ingreso : herencia
Movimiento <|-- Gasto   : herencia

Recurrente <|.. Ingreso : realización
Recurrente <|.. Gasto   : realización

Movimiento "N" --> "1" Categoria : categoría >
Movimiento "N" --> "1" Usuario   : pertenece a >

Deuda      "N" --> "1" Usuario : propietario >
Ahorro     "N" --> "1" Usuario : propietario >
MetaAhorro "N" --> "1" Usuario : propietario >

Menu "1" *-- "0..*" Menu : hijos ▸

ReporteFinanciero ..> Ingreso : <<usa>>
ReporteFinanciero ..> Gasto   : <<usa>>

' ======================================================
'  NOTAS EXPLICATIVAS
' ======================================================
note top of Movimiento
  <b>ABSTRACCIÓN</b>
  Clase abstracta: nunca se instancia directamente.
  registrar() es abstracto, obliga a cada subclase
  a definir su propio comportamiento.
  @MappedSuperclass: sus campos se mapean en las
  tablas ingreso y gasto (no crea tabla propia).
end note

note right of Ingreso
  <b>HERENCIA + POLIMORFISMO</b>
  registrar() suma al balance del usuario.
  Mismo mensaje, implementación propia.
end note

note right of Gasto
  <b>HERENCIA + POLIMORFISMO</b>
  registrar() resta del balance del usuario.
  Mismo mensaje, implementación distinta.
end note

note top of Recurrente
  <b>ABSTRACCIÓN (interfaz)</b>
  Contrato puro: solo declara qué hacer,
  no cómo. Permite herencia múltiple de
  comportamiento en Java.
end note

note bottom of Menu
  <b>COMPOSICIÓN RECURSIVA</b>
  Un Menu tiene 0..N hijos del mismo tipo.
  CascadeType.ALL: si se elimina el padre,
  los hijos se eliminan en cascada.
end note

note bottom of ReporteFinanciero
  <b>DEPENDENCIA</b>
  No es @Entity — no se persiste en BD.
  Se construye en memoria usando datos
  de Ingreso y Gasto.
end note

@enduml
